# TeachProjects

./: CMakeLists.txt  README.md
Algorithms_and_Data_Structures/Aho-Corasic/: aho-corasic.cpp
Algorithms_and_Data_Structures/Prefix-Func/: prefix-func.cpp
Assembler/accerman/: accerman.S  readme.md
C/fpclass/: fpclass.c  readme.md
CPP/any/: any.h  readme.md
CPP/buffered-channel/: buffered-channel.h  readme.md
CPP/compressed-pair/: readme.md
CPP/cow-vector/: cow-vector.h  readme.md
CPP/image-processor/: image_processor.cpp  image_processor.h  readme.md
CPP/image-processor/Filters/: Filters.cpp  Filters.h
CPP/image-processor/Image/: Color.cpp  Color.h  Image.cpp  Image.h
CPP/image-processor/Parsing/: Parser.cpp  Parser.h
CPP/image-processor/Reader_and_Writer/: Reader.cpp  Reader.h  Utils.h  Writer.cpp  Writer.h
CPP/intrusive-list/: intrusive-list.h  readme.md
CPP/lru-cache/: lru-cache.cpp  lru-cache.h  readme.md
CPP/mpsc-stack/: mpsc-stack.h  readme.md
CPP/queue/: queue.cpp  readme.md
CPP/rw-lock/: readme.md  rw-lock.h
CPP/rw-spinlock/: readme.md  rw-spinlock.h
CPP/semaphore/: readme.md  sema.h
CPP/smart-ptrs/: readme.md
CPP/smart-ptrs/intrusive/: intrusive.h
CPP/smart-ptrs/shared/: shared.h
CPP/smart-ptrs/unique/: compressed_pair.h  deleters.h  unique.h
CPP/stack/: readme.md  stack.cpp
CPP/string-view/: readme.md  string-view.h
CPP/timerqueue/: readme.md  timerqueue.h
Risc-V/prime-test/: is_prime.S  readme.md
